--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@holmanlam/react-image-annotate",
+  "name": "holman-react-image-annotate",
   "version": "1.9.1",
   "dependencies": {
     "@emotion/react": "^11.7.0",
