--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "holman-react-image-annotate",
   "version": "1.9.6",
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "@mui/icons-material": "^5.2.1",
-    "@mui/material": "^5.2.3",
-    "@mui/styles": "^5.2.3",
+    "@mui/icons-material": "5.8.2",
+    "@mui/material": "5.8.2",
+    "@mui/styles": "5.8.0",
     "@semantic-release/git": "^9.0.0",
     "autoseg": "^0.0.12",
     "clamp": "^1.0.1",
